Swagger fixed + added url checking
